# platform.upstream.libXxf86vm

./: .cvsignore  .gitignore  ChangeLog  Makefile.am  configure.ac  libXxf86vm-1.1.2.tar.bz2.delta  libXxf86vm-1.1.2.tar.bz2.id  project.config  xxf86vm.pc.in
man/: Makefile.am  XF86VM.man
packaging/: libXxf86vm.changes  libXxf86vm.spec
src/: .cvsignore  Makefile.am  XF86VMode.c
